{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 190,
  "lineage": "e0416fe7-08a5-6bd9-3783-845a6824de94",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a6656ad0aedd2886",
            "arn": "arn:aws:ec2:us-east-1:701837564712:instance/i-01bb80c116c614151",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Ec2-SSM-S3",
            "id": "i-01bb80c116c614151",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ALB-KEY",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0faa599eeeabe040d",
            "private_dns": "ip-10-0-10-191.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.191",
            "public_dns": "ec2-3-86-196-10.compute-1.amazonaws.com",
            "public_ip": "3.86.196.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03c5061b1d738e4c3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b9c8406b4fe699df",
            "tags": {
              "Name": "Ansible-Control-Node"
            },
            "tags_all": {
              "Name": "Ansible-Control-Node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e1c5434d25687463"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.Ec2-S3-profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.sgs.aws_security_group.Bastion-SG",
            "module.vpc.aws_subnet.pub-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "App-tier-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:701837564712:loadbalancer/app/private-lb/6757a6170043cf07",
            "arn_suffix": "app/private-lb/6757a6170043cf07",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-private-lb-1010110953.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:701837564712:loadbalancer/app/private-lb/6757a6170043cf07",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private-lb",
            "security_groups": [
              "sg-094ab954ae26067fe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bd96e55fa737c56c"
              },
              {
                "subnet_id": "subnet-0e3980b9385304863"
              }
            ],
            "subnets": [
              "subnet-0bd96e55fa737c56c",
              "subnet-0e3980b9385304863"
            ],
            "tags": {
              "Name": "Private-LB"
            },
            "tags_all": {
              "Name": "Private-LB"
            },
            "vpc_id": "vpc-0e3254e584a1865e4",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.sgs.aws_security_group.Bastion-SG",
            "module.sgs.aws_security_group.internal-LB-SG",
            "module.sgs.aws_security_group.web-facing-LB-SG",
            "module.sgs.aws_security_group.web-tier-instance-SG",
            "module.vpc.aws_subnet.priv-subnet-1",
            "module.vpc.aws_subnet.priv-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "Web-facing-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:701837564712:loadbalancer/app/web-facing-lb/8a550c95ec3483a5",
            "arn_suffix": "app/web-facing-lb/8a550c95ec3483a5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-facing-lb-1171271489.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:701837564712:loadbalancer/app/web-facing-lb/8a550c95ec3483a5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-facing-lb",
            "security_groups": [
              "sg-00878347df22458d2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a260781f7c1f582e"
              },
              {
                "subnet_id": "subnet-0b9c8406b4fe699df"
              }
            ],
            "subnets": [
              "subnet-0a260781f7c1f582e",
              "subnet-0b9c8406b4fe699df"
            ],
            "tags": {
              "Name": "Public-LB"
            },
            "tags_all": {
              "Name": "Public-LB"
            },
            "vpc_id": "vpc-0e3254e584a1865e4",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.sgs.aws_security_group.web-facing-LB-SG",
            "module.vpc.aws_subnet.pub-subnet-1",
            "module.vpc.aws_subnet.pub-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "priv-listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:701837564712:listener/app/private-lb/6757a6170043cf07/0b681a781e80c20f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:701837564712:targetgroup/private-lb-tg/41c926870ee15554",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:701837564712:listener/app/private-lb/6757a6170043cf07/0b681a781e80c20f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:701837564712:loadbalancer/app/private-lb/6757a6170043cf07",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_alb.App-tier-LB",
            "module.lb.aws_alb_target_group.private-lb-tg",
            "module.sgs.aws_security_group.Bastion-SG",
            "module.sgs.aws_security_group.internal-LB-SG",
            "module.sgs.aws_security_group.web-facing-LB-SG",
            "module.sgs.aws_security_group.web-tier-instance-SG",
            "module.vpc.aws_subnet.priv-subnet-1",
            "module.vpc.aws_subnet.priv-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "pub-listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:701837564712:listener/app/web-facing-lb/8a550c95ec3483a5/afbac58bdfe5937d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:701837564712:targetgroup/public-lb-tg/b41e36e9b41219e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:701837564712:listener/app/web-facing-lb/8a550c95ec3483a5/afbac58bdfe5937d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:701837564712:loadbalancer/app/web-facing-lb/8a550c95ec3483a5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_alb.Web-facing-LB",
            "module.lb.aws_alb_target_group.public-lb-tg",
            "module.sgs.aws_security_group.web-facing-LB-SG",
            "module.vpc.aws_subnet.pub-subnet-1",
            "module.vpc.aws_subnet.pub-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "private-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:701837564712:targetgroup/private-lb-tg/41c926870ee15554",
            "arn_suffix": "targetgroup/private-lb-tg/41c926870ee15554",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "4000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:701837564712:targetgroup/private-lb-tg/41c926870ee15554",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "private-lb-tg",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e3254e584a1865e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "public-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:701837564712:targetgroup/public-lb-tg/b41e36e9b41219e6",
            "arn_suffix": "targetgroup/public-lb-tg/b41e36e9b41219e6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:701837564712:targetgroup/public-lb-tg/b41e36e9b41219e6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "public-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e3254e584a1865e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bastion-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:security-group/sg-0e1c5434d25687463",
            "description": "Allow SSH into instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1c5434d25687463",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "108.173.113.10/32"
                ],
                "description": "ssh from own ip",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion-SG",
            "name_prefix": "",
            "owner_id": "701837564712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion host SG"
            },
            "tags_all": {
              "Name": "Bastion host SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3254e584a1865e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:security-group/sg-0dd46bb20afe3e019",
            "description": "Allow 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd46bb20afe3e019",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "DB SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd0ab5057b42d426"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DB sg",
            "name_prefix": "",
            "owner_id": "701837564712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB sg"
            },
            "tags_all": {
              "Name": "DB sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3254e584a1865e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sgs.aws_security_group.Bastion-SG",
            "module.sgs.aws_security_group.app-tier-instance-SG",
            "module.sgs.aws_security_group.internal-LB-SG",
            "module.sgs.aws_security_group.web-facing-LB-SG",
            "module.sgs.aws_security_group.web-tier-instance-SG",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-tier-instance-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:security-group/sg-0fd0ab5057b42d426",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd0ab5057b42d426",
            "ingress": [
              {
                "cidr_blocks": [
                  "108.173.113.10/32"
                ],
                "description": "Datagram from own ip",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [],
                "description": "Datagram from LB",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-094ab954ae26067fe"
                ],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e1c5434d25687463"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app-tier sg",
            "name_prefix": "",
            "owner_id": "701837564712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-tier sg"
            },
            "tags_all": {
              "Name": "app-tier sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3254e584a1865e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sgs.aws_security_group.Bastion-SG",
            "module.sgs.aws_security_group.internal-LB-SG",
            "module.sgs.aws_security_group.web-facing-LB-SG",
            "module.sgs.aws_security_group.web-tier-instance-SG",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal-LB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:security-group/sg-094ab954ae26067fe",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094ab954ae26067fe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ce7f7d43e3799928"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "TLS from WEB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ce7f7d43e3799928"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "internal LB-SG",
            "name_prefix": "",
            "owner_id": "701837564712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "internal-lb sg"
            },
            "tags_all": {
              "Name": "internal-lb sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3254e584a1865e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sgs.aws_security_group.Bastion-SG",
            "module.sgs.aws_security_group.web-facing-LB-SG",
            "module.sgs.aws_security_group.web-tier-instance-SG",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-facing-LB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:security-group/sg-00878347df22458d2",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00878347df22458d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from WEB",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web-facing-LB-SG",
            "name_prefix": "",
            "owner_id": "701837564712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-facing lb sg"
            },
            "tags_all": {
              "Name": "web-facing lb sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3254e584a1865e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-tier-instance-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:security-group/sg-0ce7f7d43e3799928",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce7f7d43e3799928",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00878347df22458d2"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "TLS from WEB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00878347df22458d2"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "ssh from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e1c5434d25687463"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-tier sg",
            "name_prefix": "",
            "owner_id": "701837564712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-tier sg"
            },
            "tags_all": {
              "Name": "web-tier sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3254e584a1865e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sgs.aws_security_group.Bastion-SG",
            "module.sgs.aws_security_group.web-facing-LB-SG",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04de5f22f7eaef3c1",
            "domain": "vpc",
            "id": "eipalloc-04de5f22f7eaef3c1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-206-22-145.compute-1.amazonaws.com",
            "public_ip": "44.206.22.145",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:internet-gateway/igw-080f5d357b91c1023",
            "id": "igw-080f5d357b91c1023",
            "owner_id": "701837564712",
            "tags": {
              "Name": "Internet-Gateway"
            },
            "tags_all": {
              "Name": "Internet-Gateway"
            },
            "vpc_id": "vpc-0e3254e584a1865e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04de5f22f7eaef3c1",
            "connectivity_type": "public",
            "id": "nat-0d9b9a3ad66469ecd",
            "network_interface_id": "eni-00f872f294d3e5ac1",
            "private_ip": "10.0.10.178",
            "public_ip": "44.206.22.145",
            "subnet_id": "subnet-0b9c8406b4fe699df",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_subnet.pub-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:route-table/rtb-0bb755f3c79cbb051",
            "id": "rtb-0bb755f3c79cbb051",
            "owner_id": "701837564712",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d9b9a3ad66469ecd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Route-Table"
            },
            "tags_all": {
              "Name": "Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3254e584a1865e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.pub-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:route-table/rtb-083d8a442bf85312f",
            "id": "rtb-083d8a442bf85312f",
            "owner_id": "701837564712",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-080f5d357b91c1023",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "tags_all": {
              "Name": "Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3254e584a1865e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Priv-sub-1-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d2dfa0ae7c6f316",
            "route_table_id": "rtb-0bb755f3c79cbb051",
            "subnet_id": "subnet-0bd96e55fa737c56c"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.Private_route_table",
            "module.vpc.aws_subnet.priv-subnet-1",
            "module.vpc.aws_subnet.pub-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Priv-sub-2-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d40cd97f156f744",
            "route_table_id": "rtb-0bb755f3c79cbb051",
            "subnet_id": "subnet-0e3980b9385304863"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.Private_route_table",
            "module.vpc.aws_subnet.priv-subnet-2",
            "module.vpc.aws_subnet.pub-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Priv-sub-3-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f480a28cf972225e",
            "route_table_id": "rtb-0bb755f3c79cbb051",
            "subnet_id": "subnet-04424c0ba80baf135"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.Private_route_table",
            "module.vpc.aws_subnet.priv-subnet-3",
            "module.vpc.aws_subnet.pub-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Priv-sub-4-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c38b64aafc619b8d",
            "route_table_id": "rtb-0bb755f3c79cbb051",
            "subnet_id": "subnet-0b646a0bd481a3bee"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.Private_route_table",
            "module.vpc.aws_subnet.priv-subnet-4",
            "module.vpc.aws_subnet.pub-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pub-sub-1-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071f319547dcc2c81",
            "route_table_id": "rtb-083d8a442bf85312f",
            "subnet_id": "subnet-0b9c8406b4fe699df"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.Public_route_table",
            "module.vpc.aws_subnet.pub-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pub-sub-2-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013432def5c518a87",
            "route_table_id": "rtb-083d8a442bf85312f",
            "subnet_id": "subnet-0a260781f7c1f582e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.Public_route_table",
            "module.vpc.aws_subnet.pub-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:subnet/subnet-0bd96e55fa737c56c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd96e55fa737c56c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701837564712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_subnet1"
            },
            "tags_all": {
              "Name": "priv_subnet1"
            },
            "vpc_id": "vpc-0e3254e584a1865e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:subnet/subnet-0e3980b9385304863",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3980b9385304863",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701837564712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_subnet2"
            },
            "tags_all": {
              "Name": "priv_subnet2"
            },
            "vpc_id": "vpc-0e3254e584a1865e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:subnet/subnet-04424c0ba80baf135",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04424c0ba80baf135",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701837564712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_subnet3"
            },
            "tags_all": {
              "Name": "priv_subnet3"
            },
            "vpc_id": "vpc-0e3254e584a1865e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:subnet/subnet-0b646a0bd481a3bee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.60.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b646a0bd481a3bee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701837564712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_subnet4"
            },
            "tags_all": {
              "Name": "priv_subnet4"
            },
            "vpc_id": "vpc-0e3254e584a1865e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:subnet/subnet-0b9c8406b4fe699df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9c8406b4fe699df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701837564712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet1"
            },
            "tags_all": {
              "Name": "pub-subnet1"
            },
            "vpc_id": "vpc-0e3254e584a1865e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:subnet/subnet-0a260781f7c1f582e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a260781f7c1f582e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701837564712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_subnet2"
            },
            "tags_all": {
              "Name": "pub_subnet2"
            },
            "vpc_id": "vpc-0e3254e584a1865e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:vpc/vpc-0e3254e584a1865e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-024a5cca8e71629c1",
            "default_route_table_id": "rtb-03d3f3b231e0eb535",
            "default_security_group_id": "sg-05fc6108d5d1302ba",
            "dhcp_options_id": "dopt-058777cb8eb7c941c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e3254e584a1865e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d3f3b231e0eb535",
            "owner_id": "701837564712",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          }
        }
      ]
    }
  ]
}